syntax = "proto3";

package indices.speciesspread;

option java_multiple_files = true;
option java_package = "in.foresthut.impact.models.indices.speciesspread";

message SpeciesSpreadRequest {
  string site_id = 1;
  int32 for_year = 2;
}

message SpeciesSpreadResponse {
  string site_id = 1;
  int32 for_year = 2;
  double index = 3;
  RestorationSiteMetaData restoration_site_metadata = 4;
  AoIMetaData aoi_metadata = 5;
}

message RestorationSiteMetaData {
  int64 total_species_count = 1;
  map<string, int64> taxa_wise_species_count = 2;
}

message AoIMetaData {
  int64 total_species_count = 1;
  map<string, int64> taxa_wise_species_count = 2;
}


service SpeciesSpreadIndex {
  rpc Get(SpeciesSpreadRequest) returns (SpeciesSpreadResponse);
}
